pod-config-map-set.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: webapp-config-map
